style.css
:root {
    --color-one: #FE5D26;
    --color-two: #F2C078;
    --color-three: #FAEDCA;
    --color-four: #C1DBB3;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

*::before,
*::after {
    box-sizing: border-box;
}

body,
html {
    height: 100%;
    width: 100%;
    margin: 0;
    background-color: white;
    font-family: "Scope One", serif;
    color: #393e46;
    font-optical-sizing: auto;
}



.navbar {
    background-color: var(--color-one);
}

.navbar a,
.nav-item,
.nav-link {
    color: var(--color-three);
}

.navbar .dropdown-menu .dropdown-item {
    color: var(--color-one);
}

.navbar-brand img {
    height: 50px;
    width: auto;
}

.maingrid {
    width: 100%;
    max-width: 100vw;
    height: 100vh;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    padding: 0;
    margin: 0;
}

.left-side {
    display: flex;
    flex-direction: column;
    align-items: center;
    /* vertical centering */
    justify-content: center;
    /* horizontal centering */
    background-color: var(--color-three);
    text-align: center;
}

h1 {
    font-family: "Big Shoulders Stencil", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    color: var(--color-one);
    display: block;
    font-size: 125px;
}

h2 {
    font-style: italic;
    color: var(--color-one);
}

.right-side {
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.carousel,
.carousel-inner,
.carousel-item,
img {
    height: 100%;
    width: 100%;
    object-fit: cover;
    /* ensures image doesn't stretch weirdly */
    filter: contrast(105%);

}

.caption-bg {
    background-color: rgba(0, 0, 0, 0.5);
    /* semi-transparent black */
    padding: 20px 30px;
    border-radius: 8px;
}

.carousel-caption h3 {
    font-size: 22px;
    color: var(--color-two);
}

.carousel-caption p {
    font-size: 18px;
    color: var(--color-three);
}

.section {
    width: 100%;

    min-height: 100vh;
    /* Full screen height */
    display: flex;
    justify-content: center;
    align-items: center;
}

.titulos {
    text-align: center;
    margin-top: 10%;
    color: var(--color-two);
    padding: 25px;
}

.productsFlex {
    display: flex;
    justify-content: space-evenly;
    padding: 45px;
    flex-wrap: wrap;
}

.card {
    background-color: transparent;
    text-align: center;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
    border-radius: 3px;
    width: 300px;
    height: 300px;
    /* Square shape */
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    overflow: hidden;
}

.card-img-top {
    border-top-right-radius: 3px;
    border-top-left-radius: 3px;
}

.card img {
    width: 100%;
    height: auto;
    max-height: 80%;
    /* Prevents image from crowding the title */
    object-fit: cover;
    filter: brightness(120%) contrast(90%) saturate(128%);
}

.card-title {
    color: var(--color-one);


}


#products .description {
    padding: 35px;
    font-size: 22px;
    text-align: center;
    border-bottom: 1px solid var(--color-four);
    border-top: 1px solid var(--color-four);
}

#rv,
#tst {
    font-weight: bold;
    font-style: italic;
    border: 1px solid var(--color-three);
    background-color: var(--color-three)
}

.btn {
    border: 1px solid var(--color-four);
    padding: 5px 10px;
    color: var(--color-one);
    border-radius: 0;
    background-color: var(--color-four);
    transition: all 300ms ease-in-out;
}

.btn:hover {
    background-color: var(--color-two);
    color: var(--color-one);
}

.servicesGrid {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-gap: 50px;
    width: 100%;
    height: 30vh;
    padding: 15px;
    margin: 20px;
    color: var(--color-one);
    margin-bottom: 25%;
}

.service h4 {

    border-bottom: 1px solid var(--color-three);
    padding: 10px;
}

.service-1 {
    transform: translateY(0px);
}

.service-2 {
    transform: translateY(40px);
}

.service-3 {
    transform: translateY(80px);
}

.service-4 {
    transform: translateY(120px);
}

.service-5 {
    transform: translateY(160px);
}

.fade-in {
    display: block;
    border: 1px solid var(--color-three);
    padding: 60px;
    width: 100%;
    border-radius: 25px;
    text-align: center;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

#contacto {
    background-color: var(--color-three);
    width: 100%;
}

#italic {
    padding: 35px;
    font-size: 20px;
    text-align: center;
    font-style: italic;
}

.nosotros {
    height: 600px;
    display: flex;
    justify-content: space-between;
    padding: 80px;
    border-top: 1px solid var(--color-two);
}

.left {
    width: 50%;
    border-right: 1px solid var(--color-two);
}

li {
    list-style: none;
    font-size: 18px;
}

li i {
    color: var(--color-four);
}

.right {
    width: 50%;
    text-align: end;
}

.right p {
    font-size: 18px;

}

.right a,
i {
    text-decoration: none;
    color: var(--color-one);
    font-size: 24px;
}

footer {
    background-color: var(--color-four);
    width: 100%;
    display: block;
    padding: 50px 15px;
    text-align: center;
}

footer img {
    height: 90px;
    width: auto;
    transform: translateY(-10px);

}

.footerLogoDisplay {
    display: flex;
    justify-content: center;
    border-bottom: 1px solid var(--color-two);
}

footer h5 {
    font-family: "Big Shoulders Stencil",
        sans-serif;
    font-size: 32px;
    font-weight: 300;
    color: var(--color-one);
}

footer p {
    margin-top: 10px;
}

@media (max-width: 960px) {

    .maingrid {
        grid-template-columns: repeat(1, 1fr);
    }

    h1 {
        font-weight: 200;
        font-size: 100px;
        margin-top: 40px;
    }

    h2 {
        font-size: 18px;
    }

    .titulos {
        font-size: 25px;
    }

    .productsFlex {
        display: grid;
        grid-template-columns: repeat(1, 1fr);
        grid-gap: 45px;
    }

    .fade-in ul {
        text-align: start;
    }

    .servicesGrid {
        grid-template-columns: repeat(1, 1fr);
        grid-gap: 30px;
        height: 100vh;
        text-align: center;
        transform: translateX(-20px);
    }

    .service h4 {

        border-bottom: 1px solid var(--color-three);
        padding: 10px;
    }

    .service-2 {
        transform: translateY(0px);
    }

    .service-3 {
        transform: translateY(0px);
    }

    .service-4 {
        transform: translateY(0px);
    }

    .service-5 {
        transform: translateY(0px);
    }

    .nosotros {
        height: 800px;
        display: grid;
        grid-template-columns: repeat(1, 1fr);
        padding: 20px;
    }

    .left {
        width: 100%;
        border-right: none;
        border-bottom: 1px solid var(--color-two);
    }

    .right {
        width: 100%;
        text-align: center;
        margin-top: 15px;
        padding-right: 20px;
    }

}

